--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  simple_animations: ^1.3.3  
+  simple_animations: ^1.3.3 
+  share: ^0.6.2+1 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
