--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,12 @@ dependencies:
   flutter:
     sdk: flutter
   simple_animations: ^1.3.3 
-  share: ^0.6.2+1 
+  share: ^0.6.2+1
+  firebase_core: ^0.4.0+9
+  firebase_analytics: ^5.0.2
+  firebase_admob: ^0.9.0+7
+  firebase_crashlytics: ^0.1.0+3
+  firebase_messaging: ^5.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
