--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,11 +11,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<key>GADApplicationIdentifier</key>
-    <string>ca-app-pub-9156727777369518~1185879969</string>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>enena_anchi</string>//
+	<string>enena_anchi</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
