--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  flutter_test:
+  flutter_driver:
     sdk: flutter
+  test: any
 
 
 # For information on the generic Dart part of this file, see the
