--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flare_flutter: ^1.8.3
   simple_animations: ^1.3.3 
   share: ^0.6.2+1
   firebase_core: ^0.4.0+9
@@ -51,7 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - jsonStore/enenaAnchi.json
-  #  - images/a_dot_ham.jpeg
+   - images/like_button.flr
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
