--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:
+  path_provider: any
+  path:
   flare_flutter: ^1.8.3
   simple_animations: ^1.3.3 
   share: ^0.6.2+1
