--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   sqflite:
   path_provider: any
   path:
-  flare_flutter: ^1.8.3
+  like_button: ^0.2.0
   simple_animations: ^1.3.3 
   share: ^0.6.2+1
   firebase_core: ^0.4.0+9
@@ -55,7 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - jsonStore/enenaAnchi.json
-   - images/like_button.flr
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
