--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - jsonStore/enenaAnchi.json
+   - jsonStore/bestContents.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
